--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -154,7 +154,7 @@
               style="display: flex; flex-direction: column"
             >
 
-                <!--Chọn ký bằng email hoặc số điện thoại với người ký tổ chức của tôi-->
+                <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với người ký tổ chức của tôi-->
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
@@ -166,7 +166,7 @@
                         <input [(ngModel)]="typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=0/>
                       </div>&nbsp;
                       <div>
-                        Ký bằng email
+                          {{'typeOfSignEmail' | translate}}
                       </div>
                     </div>
                   </div>
@@ -176,7 +176,7 @@
                         <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=1/>
                       </div>&nbsp;
                       <div>
-                        Ký bằng số điện thoại
+                        {{'typeOfSignEmail' | translate}}
                       </div>
                     </div>
                   </div>
@@ -404,7 +404,7 @@
               style="display: flex; flex-direction: column"
             >
 
-            <!--Chọn ký bằng email hoặc số điện thoại với văn thư tổ chức của tôi-->
+            <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với văn thư tổ chức của tôi-->
             <div class="participants--input" style="display: flex">
               <div class="participants__name">
                 <div class="label_detail text-color">
@@ -416,7 +416,7 @@
                     <input [(ngModel)]="typeSign" type="radio" name="checkPhoneMailOrgDoc_{{index}}" [value]=0/>
                   </div>&nbsp;
                   <div>
-                    Ký bằng email
+                      {{'typeOfSignEmail' | translate}}
                   </div>
                 </div>
               </div>
@@ -426,7 +426,7 @@
                     <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgDoc_{{index}}" [value]=1/>
                   </div>&nbsp;
                   <div>
-                    Ký bằng số điện thoại
+                    {{'typeOfSignEmail' | translate}}
                   </div>
                 </div>
               </div>
@@ -908,7 +908,7 @@
 
               
 
-               <!--Chọn ký bằng email hoặc số điện thoại với người ký tổ chức của đối tác-->
+               <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với người ký tổ chức của đối tác-->
                <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
@@ -920,7 +920,7 @@
                       <input [(ngModel)]="typeSign" type="radio" name="checkPhoneMailPartSign_{{index}}_{{id}}" [value]=0/>
                     </div>&nbsp;
                     <div>
-                      Ký bằng email
+                        {{'typeOfSignEmail' | translate}}
                     </div>
                   </div>
                 </div>
@@ -930,7 +930,7 @@
                       <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPartSign_{{index}}_{{id}}" [value]=1/>
                     </div>&nbsp;
                     <div>
-                      Ký bằng số điện thoại
+                      {{'typeOfSignEmail' | translate}}
                     </div>
                   </div>
                 </div>
@@ -1103,7 +1103,7 @@
                     <div class="participants__name" style="width: 90%">
                       <div class="label_detail text-color">Mã số thuế&nbsp;<span class="required-title">*</span></div>
                       <div class="input-data">
-                        <input type="text" placeholder="{{'Nhập mã số thuế/CMT/CCCD' | translate}}" [(ngModel)]="d.tax_code" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                        <input type="text" placeholder="{{'Nhập mã số thuế' | translate}}" [(ngModel)]="d.tax_code" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                       </div>
                     </div>
                   </div>
@@ -1165,7 +1165,7 @@
                 style="display: flex; flex-direction: column"
               >
 
-                <!--Chọn ký bằng email hoặc số điện thoại với văn thư đối tác-->
+                <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với văn thư đối tác-->
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
@@ -1177,7 +1177,7 @@
                         <input [(ngModel)]="typeSign" type="radio" name="checkPhoneMailPartDoc_{{index}}_{{id}}" [value]=0/>
                       </div>&nbsp;
                       <div>
-                        Ký bằng email
+                          {{'typeOfSignEmail' | translate}}
                       </div>
                     </div>
                   </div>
@@ -1187,7 +1187,7 @@
                         <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPartDoc_{{index}}_{{id}}" [value]=1/>
                       </div>&nbsp;
                       <div>
-                        Ký bằng số điện thoại
+                        {{'typeOfSignEmail' | translate}}
                       </div>
                     </div>
                   </div>
@@ -1408,7 +1408,7 @@
                 style="display: flex; flex-direction: column"
               >
 
-                <!--Chọn ký bằng email hoặc số điện thoại với người ký là cá nhân-->
+                <!--Chọn   {{'typeOfSignEmail' | translate}} hoặc số điện thoại với người ký là cá nhân-->
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
@@ -1420,7 +1420,7 @@
                         <input [(ngModel)]="typeSign" type="radio" name="checkPhoneMailPerson_{{index}}_{{id}}" [value]=0/>
                       </div>&nbsp;
                       <div>
-                        Ký bằng email
+                          {{'typeOfSignEmail' | translate}}
                       </div>
                     </div>
                   </div>
@@ -1430,7 +1430,7 @@
                         <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPerson_{{index}}_{{id}}" [value]=1/>
                       </div>&nbsp;
                       <div>
-                        Ký bằng số điện thoại
+                        {{'typeOfSignEmail' | translate}}
                       </div>
                     </div>
                   </div>
