--- a/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.html
@@ -31,8 +31,19 @@
       <div class="row" style="padding-top: 10px;">
         <div class="col-md-12">
             <div class="label text-color">{{'Mật khẩu cấp 1' | translate}} <span class="required-title">*</span></div>
-            <div class="input-data">
-                <input type="password" formControlName="pass1">
+            <div class="input-line">
+              <input *ngIf="this.fieldTextType === false" class="pw" type="text" formControlName="pass1" id="pass1">
+              <input class="input-text" *ngIf="this.fieldTextType === true" type="text" formControlName="pass1" id="pass1"/>
+                <div class="icon-password">
+                  <i class="fa"
+                    [ngClass]="{
+                      'fa-eye-slash': !fieldTextType,
+                      'fa-eye': fieldTextType
+                    }"
+                    (click)="toggleFieldTextType()"
+                    style="color: #106DB6;"
+                  ></i>
+                </div>
             </div>
             <div *ngIf="submitted && f.pass1.errors" class="invalid">
               <div *ngIf="f.pass1.errors.required">{{'Mật khẩu cấp 1 không được để trống' | translate}}</div>
@@ -43,8 +54,19 @@
       <div class="row" style="padding-top: 10px;">
         <div class="col-md-12">
             <div class="label text-color">{{'Mật khẩu cấp 2' | translate}} <span class="required-title">*</span></div>
-            <div class="input-data">
-                <input type="password" formControlName="pass2">
+            <div class="input-line">
+              <input *ngIf="this.fieldTextType === false" class="pw" type="text" formControlName="pass1" id="pass1">
+              <input class="input-text" *ngIf="this.fieldTextType === true" type="text" formControlName="pass1" id="pass1"/>
+                <div class="icon-password">
+                  <i class="fa"
+                    [ngClass]="{
+                      'fa-eye-slash': !fieldTextType,
+                      'fa-eye': fieldTextType
+                    }"
+                    (click)="toggleFieldTextType()"
+                    style="color: #106DB6;"
+                  ></i>
+                </div>
             </div>
             <div *ngIf="submitted && f.pass2.errors" class="invalid">
               <div *ngIf="f.pass2.errors.required">{{'Mật khẩu cấp 2 không được để trống' | translate}}</div>
