--- a/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.scss
@@ -77,3 +77,11 @@ input.pw {
     padding: 5px 15px;
   }
 }
+
+.input-text {
+  border: 0;
+  width: 100%;
+  outline:0px;
+  border-radius: 0 5px 5px 0;
+}
+
